Fix CSS for projects page. Now Portfolio page use its own specified CSS file. The Show Configuration button in portfolio input panel no longer hide the configuration panel. Now when configuration panel is visible, the Show Configuration button and OK button in portfolio input panel will be disabled. Users have to click OK in the configuration panel to finish their configurations.

--- a/src/org/hackystat/projectbrowser/style/boilerplate/screen.css
+++ b/src/org/hackystat/projectbrowser/style/boilerplate/screen.css
@@ -60,59 +60,6 @@ hr { color : #3366CC; background-color : #3366CC; height : 2px; }
     width: 6em;
 }
 
-
-/* Portfolio Detail Table
---------------------------------------------------------------- */
-#portfolio_detail_table {
-  background: black;
-}
-#portfolio_detail_table a {
-  color:#0099FF; 
-}
-#portfolio_detail_table th {
-  color:#0099FF; 
-  padding-left: 5px; 
-  white-space: nowrap
-}
-#portfolio_detail_table th.projectName {
-  text-align:left;
-}
-#portfolio_detail_table th.measureHead {
-	min-width: 5em; 
-	border-left: 1px solid #ddd; 
-	text-align:center
-}
-#portfolio_detail_table td {
-  white-space:nowrap;
-}
-
-/* Configuration Table
---------------------------------------------------------------- */
-#configuration_table {
-  margin-right: 10px;
-  white-space:nowrap;
-  border-bottom:1px solid #ddd; 
-}
-#configuration_table td, #configuration_table th {
-	padding: 2px 5px;
-}
-#configuration_table tr.odd{
-  background-color: #ffffff;
-}
-#configuration_table tr.even{
-  background-color: #E5ECF9;
-}
-
-/* Embedded Table
---------------------------------------------------------------- */
-#embedded_table {	
-	 align: right;
-	margin: 0;
-}
-#embedded_table td{  
-	border: 0;
-	text-align: right;
-}
 /* Page arrangement
 --------------------------------------------------------------- */
 
